8262446: DragAndDrop hangs on Windows