src/java.desktop/windows/native/libawt/windows/awt_Toolkit.cpp
@@ -345,6 +345,7 @@ AwtToolkit::AwtToolkit() {
     m_waitEvent = ::CreateEvent(NULL, FALSE, FALSE, NULL);
     m_inputMethodWaitEvent = ::CreateEvent(NULL, FALSE, FALSE, NULL);
     isInDoDragDropLoop = FALSE;
+    isDnDActive = FALSE;
     eventNumber = 0;
 }
 
@@ -3216,7 +3217,7 @@ LRESULT AwtToolkit::InvokeInputMethodFunction(UINT msg, WPARAM wParam, LPARAM lP
      * the IME completion.
      */
     CriticalSection::Lock lock(m_inputMethodLock);
-    if (isInDoDragDropLoop) {
+    if (isInDoDragDropLoop || isDnDActive) {
         SendMessage(msg, wParam, lParam);
         ::ResetEvent(m_inputMethodWaitEvent);
         return m_inputMethodData;
