src/java.desktop/windows/native/libawt/windows/awt_Toolkit.h
@@ -442,6 +442,7 @@ public:
     HANDLE m_waitEvent;
     volatile DWORD eventNumber;
     volatile BOOL isInDoDragDropLoop;
+    volatile BOOL isDnDActive;
 private:
     HWND CreateToolkitWnd(LPCTSTR name);
 
